<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity" >

        <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestedinScrollView"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/transport" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Bus Track"
                    android:textColor="@color/textBlack"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textFontWeight="300"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:layout_marginTop="35dp"
                    android:paddingTop="@dimen/padding_large"
                    android:textColorHint="#000000">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_large"
                    android:textColorHint="#000000"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#000000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I am a"
                        android:textSize="20sp"
                        android:paddingRight="32dp"
                        android:textColor="#000000"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/loginchooser_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:entries="@array/choose"
                        android:scrollbarSize="20sp"
                        android:gravity="end"
                        />
                </LinearLayout>




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    android:background="@drawable/login_button_shape"
                    android:textColor="#FFFFFF" />

<!--                <com.facebook.login.widget.LoginButton-->
<!--                    android:id="@+id/login_button"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:onClick="facebookLogin"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:layout_marginBottom="20dp" />-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLinkRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="No account yet? Sign Up"
                    android:textColor="#0645ad"
                    android:textSize="16dp" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/driver_login_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="10dp"
                    android:background="#0645ad"
                    android:src="@drawable/ic_baseline_add_24"
                    app:backgroundTint="#0645ad"
                    android:layout_marginRight="4dp"
                    />



            </LinearLayout>




        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>