...
    android:background="#FFFFFF"
    tools:context=".RegisterActivity" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedSignupScrollView"
        android:clipToPadding="false"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

...
